[package]
name = "secret_dca"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11"}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "storage", "snip20", "serialization", "viewing-key", "permit"] }
schemars = "0.8.12"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }