[package]
name = "secret_dca"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", default-features = false, tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", tag = "v1.1.9-secret" }
rand = { version = "0.8.5", default-features = false }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "permit",
  "viewing-key",
], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }
secret-toolkit-crypto = { git = "https://github.com/scrtlabs/secret-toolkit", features = [
  "rand",
  "hash",
], rev = "9b74bdac71c2fedcc12246f18cdfdd94b8991282" }
schemars = "0.8.12"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.1.8" }